--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,6 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
@@ -19,7 +18,7 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npx playwright install
-    - run: npm run test-headless
+    - run: npm run souce-labs-test-headless && npm run ui-playground-test-headless
     - run: npm run allure-generate
   
     - uses: actions/upload-artifact@master
