--- a/package.json
+++ b/package.json
@@ -2,12 +2,11 @@
   "scripts": {
     "ui-playground-test-headless": "npx playwright test --reporter=list,experimental-allure-playwright --config=tests/ui-tetsing-playground/ui-test-playground.config.ts",
     "ui-playground-test-headed": "npx playwright test --headed --reporter=line,experimental-allure-playwright --config=tests/ui-testing-playground/ui-test-playground.config.ts",
-
-    "souce-labs-test-headless": "npx playwright test --reporter=list,experimental-allure-playwright --config=tests/souce-labs-tests/souce-labs.config.ts",
-    "souce-labs-test-headed": "npx playwright test --headed --reporter=line,experimental-allure-playwright --config=tests/souce-labs-tests/souce-labs.config.ts",
-
+    "sauce-labs-test-headless": "npx playwright test --reporter=list,experimental-allure-playwright --config=tests/sauce-labs-tests/sauce-labs.config.ts",
+    "sauce-labs-test-headed": "npx playwright test --headed --reporter=line,experimental-allure-playwright --config=tests/sauce-labs-tests/sauce-labs.config.ts",
     "allure-generate": "npx allure generate ./allure-results --clean",
-    "allure-open": "npx allure open ./allure-report"
+    "allure-open": "npx allure open ./allure-report",
+    "test": "npm run ui-playground-test-headless && npm run sauce-labs-test-headless"
   },
   "devDependencies": {
     "@playwright/test": "^1.15.0",
@@ -24,6 +23,7 @@
   },
   "dependencies": {
     "@types/mocha": "^9.0.0",
+    "@types/node": "^16.10.1",
     "agent-base": "^6.0.2",
     "ansi-regex": "^5.0.1",
     "ansi-styles": "^3.2.1",
