--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+      env: 
+          SECRET_PASSWORD: ${{  secrets.SECRET_PASSWORD  }}
     - name: Use Node.js
       uses: actions/setup-node@v2
       with:
