--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,9 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npx playwright install
+    - run: touch .env
+    - run: echo $SECRET_PASSWORD
+    - run: $SECRET_PASSWORD >> .env
     - run: npm test
     - run: npm run allure-generate
   
