--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,9 @@ jobs:
     - uses: actions/checkout@v2
       env: 
           SECRET_PASSWORD: ${{  secrets.SECRET_PASSWORD  }}
+    - run: |
+          echo "${{SECRET_PASSWORD}}"
+          echo HEREEE
     - name: Use Node.js
       uses: actions/setup-node@v2
       with:
@@ -20,8 +23,6 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npx playwright install
-    - run: |
-          echo $SECRET_PASSWORD
     - run: npm test
     - run: npm run allure-generate
   
