--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
       env: 
           SECRET_PASSWORD: ${{  secrets.SECRET_PASSWORD  }}
     - run: |
-          echo "${{SECRET_PASSWORD}}"
+          echo $SECRET_PASSWORD
           echo HEREEE
     - name: Use Node.js
       uses: actions/setup-node@v2
