--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,21 +11,20 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - run: |
-          echo $SECRET_PASSWORD > .env
-          echo HEREEE
-          cat .env
-      env: 
-          SECRET_PASSWORD: ${{  secrets.SECRET_PASSWORD  }}
     - name: Use Node.js
       uses: actions/setup-node@v2
       with:
         node-version: '14'
         cache: 'npm'
-    - run: npm ci
-    - run: npx playwright install
-    - run: npm test
-    - run: npm run allure-generate
+    - run: |
+          echo $SECRET_PASSWORD > .env
+          cat .env
+          npm ci 
+          npx playwright install 
+          npm test
+          npm allure-generate
+      env: 
+          SECRET_PASSWORD: ${{  secrets.SECRET_PASSWORD  }}
   
     - uses: actions/upload-artifact@master
       with:
