--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "scripts": {
-    "ui-playground-test-headless": "npx playwright test --reporter=list,experimental-allure-playwright --config=tests/ui-tetsing-playground/ui-test-playground.config.ts",
-    "ui-playground-test-headed": "npx playwright test --headed --reporter=line,experimental-allure-playwright --config=tests/ui-testing-playground/ui-test-playground.config.ts",
-    "sauce-labs-test-headless": "npx playwright test --reporter=list,experimental-allure-playwright --config=tests/sauce-labs-tests/sauce-labs.config.ts",
-    "sauce-labs-test-headed": "npx playwright test --headed --reporter=line,experimental-allure-playwright --config=tests/sauce-labs-tests/sauce-labs.config.ts",
+    "ui-playground-tests-headless": "npx playwright test --reporter=list,experimental-allure-playwright --config=tests/ui-tetsing-playground/ui-test-playground.config.ts",
+    "ui-playground-tests-headed": "npx playwright test --headed --reporter=line,experimental-allure-playwright --config=tests/ui-testing-playground/ui-test-playground.config.ts",
+    "sauce-labs-tests-headless": "npx playwright test --reporter=list,experimental-allure-playwright --config=tests/sauce-labs-tests/sauce-labs.config.ts",
+    "sauce-labs-tests-headed": "npx playwright test --headed --reporter=line,experimental-allure-playwright --config=tests/sauce-labs-tests/sauce-labs.config.ts",
     "allure-generate": "npx allure generate ./allure-results --clean",
     "allure-open": "npx allure open ./allure-report",
-    "test": "npm run ui-playground-test-headless && npm run sauce-labs-test-headless"
+    "test": "npm run ui-playground-tests-headless && npm run sauce-labs-tests-headless"
   },
   "devDependencies": {
     "@playwright/test": "^1.15.0",
