--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Login to Docker Hub
       uses: docker/login-action@v1
       with:
-        username: ${{ secrets.DOCKER_USER NAME }}
+        username: ${{ secrets.DOCKER_USER_NAME }}
         password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
     - name: Build and push
       id: docker_build
